force-app/main/default/objects/ysign__Yousign_setting__c/ysign__Yousign_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Yousign setting</label>
</CustomObject>