force-app/main/default/objects/ysign__Yousign_setting__c/fields/ysign__ApexClass_ProcedureConfig__c.field-meta.xml
<CustomField>
    <fullName>ysign__ApexClass_ProcedureConfig__c</fullName>
    <description>To override default yousign Procedure Config, please create an apex class that implements ysign.IProcedureConfig and provide your implementation of : https://swagger.yousign.com/ (ProcedureConfig)</description>
    <label>ApexClass ProcedureConfig</label>
    <length>200</length>
    <type>Text</type>
</CustomField>