force-app/main/default/objects/ysign__Yousign_setting__c/fields/ysign__Api_key__c.field-meta.xml
<CustomField>
    <fullName>ysign__Api_key__c</fullName>
    <label>Api key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>