force-app/main/default/objects/ysign__Yousign_setting__c/fields/ysign__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ysign__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>