force-app/main/default/objects/ysign__Yousign_setting__c/fields/ysign__Environment__c.field-meta.xml
<CustomField>
    <fullName>ysign__Environment__c</fullName>
    <description>PRODUCTION or STAGING</description>
    <inlineHelpText>PRODUCTION or STAGING</inlineHelpText>
    <label>Environment</label>
    <length>12</length>
    <type>Text</type>
</CustomField>