force-app/main/default/objects/ysign__Yousign_setting__c/fields/ysign__Public_Site_Link__c.field-meta.xml
<CustomField>
    <fullName>ysign__Public_Site_Link__c</fullName>
    <label>Public Site Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>